packages/lustre-v6.6.103.3/test/should_fail/type/merge_not_exhaustive.lus
type trival = enum { Pile, Face, Tranche }; ---
node merge_not_exhaustive(clk: trival; ---
   i1 : int when Pile(clk) ;
   i2 : int when Face(clk); 
   i3 : int when Tranche(clk)) 
returns (y: int); ---
let
    y = merge clk
--      (Pile ->    i1)
        (Face    -> i2)
        (Tranche -> i3);
tel